# cosmocnc_jax

./: .gitignore  pyproject.toml  setup.py
cosmocnc_jax/: __init__.py  cat.py  cnc.py  cnc_cobaya_likelihood.py  cnc_cobaya_theory.py  config.py  cosmo.py  cosmocnc_cobaya.py  emulators.py  hmf.py  params.py  ps.py  sim.py  sr.py  utils.py
cosmocnc_jax/surveys/: survey_cat_so_sim.py  survey_sr_so_sim.py
docs/: sim_benchmarks.md
tests/: bench_batching.py  bench_npts256.py  bench_npts_fair.py  bench_npts_sweep.py  bench_split_vs_allinone.py  benchmark_3way.py  benchmark_3way_results.txt  benchmark_numpy_vs_jax.py  check_accuracy.py  check_analytical.py  comparison_notebook.ipynb  comparison_notebook_executed.ipynb  debug_bc_diff.py  jit_test.py  nd_config.py  profile_bc.py  profile_breakdown.py  profile_full.py  profile_hmf.py  profile_nd_bc.py  profile_nd_bc2.py  profile_nd_simple.py  profile_split_stages.py  profile_step.py  quick_test.py  quick_test2.py  quick_test3.py  test_circular_conv.py  test_comparison.py  test_comprehensive_nd.py  test_emulators.py  test_jax_cosmo.py  test_matrix_fftlog.py  test_nd_bc.py  test_nd_cosmocnc.py  test_nd_jax.py  test_nd_report.py  test_outer_shm.py  test_partial_obs.py  test_sim.py  (+1 more)
tutorials/: cosmocnc_jax_tutorial.ipynb  cosmocnc_jax_tutorial_executed.ipynb
